[package]
name = "vfs-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.0", features = ["derive"] }

[dependencies.vfs]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "chaos"
path = "fuzz_targets/chaos.rs"
test = false
doc = false
